# luxonis-perception-deployment-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/experiments/: mvp_live.yaml  mvp_replay.yaml
configs/variants/: mvp_sweep.yaml
docs/: mvp_definition.md
src/: main.py
src/pipeline_builder/: build_pipeline copy.py  build_pipeline.py  camera_factory.py  input_factory.py  model_resolver.py  nn_factory.py  replay_factory.py  tracker_factory.py  types.py
src/pipeline_spec/: load_spec.py  models.py  validators.py
src/profiler/: metrics.py  pipeline_timing.py  system_probe.py
src/recommender/: recommend.py  rules.py
src/recorder_replay/: replay_io.py  session_manifest.py
src/reporting/: build_report.py  plots.py  templates.py
src/runner/: campaign_progress.py  campaign_runner.py  live_runner.py  output_writer.py  queue_setup.py  render.py  run_variant.py  video_runner.py
src/validator/: detection_stability.py  run_quality.py  tracking_stability.py
src/variant_generator/: generate_variants.py
